tests/expectations/compiler/core/algorithms/sha3_512_hash_to_scalar.out
<<<<<<< HEAD
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:28:25
     |
  28 |         let a: scalar = SHA3_512::hash_to_scalar(addr_value);
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:29:25
     |
  29 |         let b: scalar = SHA3_512::hash_to_scalar(bool_value);
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:30:25
     |
  30 |         let c: scalar = SHA3_512::hash_to_scalar(field_value);
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:31:25
     |
  31 |         let d: scalar = SHA3_512::hash_to_scalar(group_value);
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:32:25
     |
  32 |         let e: scalar = SHA3_512::hash_to_scalar(i8_value);
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:33:25
     |
  33 |         let f: scalar = SHA3_512::hash_to_scalar(i16_value);
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:34:25
     |
  34 |         let g: scalar = SHA3_512::hash_to_scalar(i32_value);
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:35:25
     |
  35 |         let h: scalar = SHA3_512::hash_to_scalar(i64_value);
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:36:25
     |
  36 |         let i: scalar = SHA3_512::hash_to_scalar(i128_value);
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:37:25
     |
  37 |         let j: scalar = SHA3_512::hash_to_scalar(u8_value);
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:38:25
     |
  38 |         let k: scalar = SHA3_512::hash_to_scalar(u16_value);
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:39:25
     |
  39 |         let l: scalar = SHA3_512::hash_to_scalar(u32_value);
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:40:25
     |
  40 |         let m: scalar = SHA3_512::hash_to_scalar(u64_value);
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:41:25
     |
  41 |         let n: scalar = SHA3_512::hash_to_scalar(u128_value);
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:42:25
     |
  42 |         let o: scalar = SHA3_512::hash_to_scalar(scalar_value);
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372006]: Call expected `2` args, but got `1`
    --> compiler-test:44:25
     |
  44 |         let q: scalar = SHA3_512::hash_to_scalar(Foo { a: 1u128, b: 1u128 });
     |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
=======
program test.aleo;

function main:
    input r0 as i8.private;
    input r1 as i16.private;
    input r2 as i32.private;
    input r3 as i64.private;
    input r4 as u8.private;
    input r5 as u16.private;
    input r6 as u32.private;
    input r7 as u64.private;
    hash.sha3_512 aleo10qerras5799u6k7rjtc9y3hcwxuykr45qra7x7dp6jgnc0923czqm0lgta into r8 as scalar;
    hash.sha3_512 true into r9 as scalar;
    hash.sha3_512 1field into r10 as scalar;
    hash.sha3_512 1540945439182663264862696551825005342995406165131907382295858612069623286213group into r11 as scalar;
    hash.sha3_512 r0 into r12 as scalar;
    hash.sha3_512 r1 into r13 as scalar;
    hash.sha3_512 r2 into r14 as scalar;
    hash.sha3_512 r3 into r15 as scalar;
    hash.sha3_512 1i128 into r16 as scalar;
    hash.sha3_512 r4 into r17 as scalar;
    hash.sha3_512 r5 into r18 as scalar;
    hash.sha3_512 r6 into r19 as scalar;
    hash.sha3_512 r7 into r20 as scalar;
    hash.sha3_512 1u128 into r21 as scalar;
    hash.sha3_512 1scalar into r22 as scalar;
    output r8 as scalar.private;
    output r9 as scalar.private;
    output r10 as scalar.private;
    output r11 as scalar.private;
    output r12 as scalar.private;
    output r13 as scalar.private;
    output r14 as scalar.private;
    output r15 as scalar.private;
    output r16 as scalar.private;
    output r17 as scalar.private;
    output r18 as scalar.private;
    output r19 as scalar.private;
    output r20 as scalar.private;
    output r21 as scalar.private;
    output r22 as scalar.private;
    output 1747016465410182959669356992942309230500252586321283009722936176233893486260scalar as scalar.private;
>>>>>>> mainnet
